add mongodb to lagrange node

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,14 @@ services:
     image: lagrange-node
     environment:
       - name=value
+      - MONGO_URI=mongodb://mongo:27017
     networks:
       localnet:
         ipv4_address: 192.168.20.6
     ports:
       - 9090:9090
+    depends_on:
+      - mongo
     command:
       - "/bin/sh"
       - "-c"
@@ -22,6 +25,7 @@ services:
       - LAGRANGE_NODE_CLIENT_GRPCURL=192.168.20.6:9090
       - LAGRANGE_NODE_CLIENT_PULLINTERVAL=2.4s
       - LAGRANGE_NODE_CLIENT_PRIVATEKEY=0x0642cf177a12c962938366d7c2d286f49806625831aaed8e861405bfdd1f654a
+      - MONGO_URI=mongodb://mongo:27017
     networks:
       localnet:
         ipv4_address: 192.168.20.2
@@ -36,9 +40,12 @@ services:
       - LAGRANGE_NODE_CLIENT_GRPCURL=192.168.20.6:9090
       - LAGRANGE_NODE_CLIENT_PULLINTERVAL=2s
       - LAGRANGE_NODE_CLIENT_PRIVATEKEY=0xca056e1830045cd5aa844e02e493e27b8c454b3059315b8ee34d42414141247d
+      - MONGO_URI=mongodb://mongo:27017
     networks:
       localnet:
         ipv4_address: 192.168.20.3
+    depends_on:
+      - mongo
     command:
       - "/bin/sh"
       - "-c"
@@ -50,9 +57,12 @@ services:
       - LAGRANGE_NODE_CLIENT_GRPCURL=192.168.20.6:9090
       - LAGRANGE_NODE_CLIENT_PULLINTERVAL=1.8s
       - LAGRANGE_NODE_CLIENT_PRIVATEKEY=0xa339d4976df7cc511ad3d31fb28407e0b92a3f876cc8d81434abfe27e09c0275
+      - MONGO_URI=mongodb://mongo:27017
     networks:
       localnet:
         ipv4_address: 192.168.20.4
+    depends_on:
+      - mongo
     command:
       - "/bin/sh"
       - "-c"
@@ -64,13 +74,23 @@ services:
       - LAGRANGE_NODE_CLIENT_GRPCURL=192.168.20.6:9090
       - LAGRANGE_NODE_CLIENT_PULLINTERVAL=2.2s
       - LAGRANGE_NODE_CLIENT_PRIVATEKEY=0x1002490094172864114bb1fa239db4d25399af2c2629368027d97e47b9ffaaa7
+      - MONGO_URI=mongodb://mongo:27017
     networks:
       localnet:
         ipv4_address: 192.168.20.5
+    depends_on:
+      - mongo
     command:
       - "/bin/sh"
       - "-c"
       - "/app/lagrange-node run-client"
+  mongo:
+    image: mongo:4.4
+    container_name: mongo
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongodb_data:/data/db
 
 networks:
   localnet:
@@ -79,3 +99,6 @@ networks:
       driver: default
       config:
         - subnet: 192.168.20.0/25
+
+volumes:
+  mongodb_data:
