--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,7 +71,12 @@ services:
       - "/bin/sh"
       - "-c"
       - "/app/lagrange-node run-client"
-
+  mongo:
+    image: mongo:4.4
+    container_name: mongo
+    ports:
+      - "27017:27017"
+   
 networks:
   localnet:
     driver: bridge
