--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     image: lagrange-node
     networks:
       localnet:
-        ipv4_address: 192.168.20.6
+        ipv4_address: 192.168.20.5
     ports:
       - 9090:9090
     command:
@@ -20,7 +20,7 @@ services:
       - LAGRANGE_NODE_CLIENT_GRPCURL=192.168.20.6:9090
       - LAGRANGE_NODE_CLIENT_PULLINTERVAL=2.4s
       - LAGRANGE_NODE_CLIENT_PRIVATEKEY=0x0642cf177a12c962938366d7c2d286f49806625831aaed8e861405bfdd1f654a
-      - LAGRANGE_NODE_CLIENT_STAKEADDRESS=0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2
+      - LAGRANGE_NODE_CLIENT_STAKEADDRESS=0x516D6C27C23CEd21BF7930E2a01F0BcA9A141a0d
     networks:
       localnet:
         ipv4_address: 192.168.20.2
@@ -35,7 +35,7 @@ services:
       - LAGRANGE_NODE_CLIENT_GRPCURL=192.168.20.6:9090
       - LAGRANGE_NODE_CLIENT_PULLINTERVAL=2s
       - LAGRANGE_NODE_CLIENT_PRIVATEKEY=0xca056e1830045cd5aa844e02e493e27b8c454b3059315b8ee34d42414141247d
-      - LAGRANGE_NODE_CLIENT_STAKEADDRESS=0x00000000219ab540356cbb839cbe05303d7705fa
+      - LAGRANGE_NODE_CLIENT_STAKEADDRESS=0x4d694DE17246086d6451D732Ea8EA2a9a76dC997
     networks:
       localnet:
         ipv4_address: 192.168.20.3
@@ -50,7 +50,7 @@ services:
       - LAGRANGE_NODE_CLIENT_GRPCURL=192.168.20.6:9090
       - LAGRANGE_NODE_CLIENT_PULLINTERVAL=1.8s
       - LAGRANGE_NODE_CLIENT_PRIVATEKEY=0xa339d4976df7cc511ad3d31fb28407e0b92a3f876cc8d81434abfe27e09c0275
-      - LAGRANGE_NODE_CLIENT_STAKEADDRESS=0xbe0eb53f46cd790cd13851d5eff43d12404d33e8
+      - LAGRANGE_NODE_CLIENT_STAKEADDRESS=0x5d51B4c1fb0c67d0e1274EC96c1B895F45505a3D
     networks:
       localnet:
         ipv4_address: 192.168.20.4
@@ -58,27 +58,23 @@ services:
       - "/bin/sh"
       - "-c"
       - "/app/lagrange-node run-client"
-  simnode3:
-    container_name: node3
-    image: lagrange-node
-    environment:
-      - LAGRANGE_NODE_CLIENT_GRPCURL=192.168.20.6:9090
-      - LAGRANGE_NODE_CLIENT_PULLINTERVAL=2.2s
-      - LAGRANGE_NODE_CLIENT_PRIVATEKEY=0x1002490094172864114bb1fa239db4d25399af2c2629368027d97e47b9ffaaa7
-      - LAGRANGE_NODE_CLIENT_STAKEADDRESS=0xda9dfa130df4de4673b89022ee50ff26f6ea73cf
+  lagrangesc:
+    container_name: lagrange-smart-contract
+    image: lagrangelabs/lagrange-contracts:latest
     networks:
       localnet:
-        ipv4_address: 192.168.20.5
-    command:
-      - "/bin/sh"
-      - "-c"
-      - "/app/lagrange-node run-client"
+        ipv4_address: 192.168.20.100
+    ports:
+      - "8545:8545"
   mongo:
     image: mongo:4.4
     container_name: mongo
+    networks:
+      localnet:
+        ipv4_address: 192.168.20.101
     ports:
       - "27017:27017"
-   
+
 networks:
   localnet:
     driver: bridge
