--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,35 @@
 version: "3.5"
 
 services:
-  simserver:
+  simsequencer:
     container_name: sequencer
     image: lagrange-node
     networks:
       localnet:
         ipv4_address: 192.168.20.5
+    command:
+      - "/bin/sh"
+      - "-c"
+      - "/app/lagrange-node run-sequencer"
+    environment:
+      - LAGRANGE_NODE_SEQUENCER_RPCURL=http://192.168.20.100:8545
+      - LAGRANGE_NODE_STORE_DBPATH=mongodb://192.168.20.101:27017
+      - LAGRANGE_NODE_GOVERNANCE_ETHEREUMURL=http://192.168.20.100:8545
+  simserver:
+    container_name: server
+    image: lagrange-node
+    networks:
+      localnet:
+        ipv4_address: 192.168.20.6
     ports:
       - 9090:9090
     command:
       - "/bin/sh"
       - "-c"
       - "/app/lagrange-node run-server"
+    environment:
+      - LAGRANGE_NODE_SEQUENCER_RPCURL=http://192.168.20.100:8545
+      - LAGRANGE_NODE_STORE_DBPATH=mongodb://192.168.20.101:27017
   simnode0:
     container_name: node0
     image: lagrange-node
@@ -21,6 +38,7 @@ services:
       - LAGRANGE_NODE_CLIENT_PULLINTERVAL=2.4s
       - LAGRANGE_NODE_CLIENT_PRIVATEKEY=0x0642cf177a12c962938366d7c2d286f49806625831aaed8e861405bfdd1f654a
       - LAGRANGE_NODE_CLIENT_STAKEADDRESS=0x516D6C27C23CEd21BF7930E2a01F0BcA9A141a0d
+      - LAGRANGE_NODE_STORE_DBPATH=mongodb://192.168.20.101:27017
     networks:
       localnet:
         ipv4_address: 192.168.20.2
@@ -36,6 +54,7 @@ services:
       - LAGRANGE_NODE_CLIENT_PULLINTERVAL=2s
       - LAGRANGE_NODE_CLIENT_PRIVATEKEY=0xca056e1830045cd5aa844e02e493e27b8c454b3059315b8ee34d42414141247d
       - LAGRANGE_NODE_CLIENT_STAKEADDRESS=0x4d694DE17246086d6451D732Ea8EA2a9a76dC997
+      - LAGRANGE_NODE_STORE_DBPATH=mongodb://192.168.20.101:27017
     networks:
       localnet:
         ipv4_address: 192.168.20.3
@@ -51,6 +70,7 @@ services:
       - LAGRANGE_NODE_CLIENT_PULLINTERVAL=1.8s
       - LAGRANGE_NODE_CLIENT_PRIVATEKEY=0xa339d4976df7cc511ad3d31fb28407e0b92a3f876cc8d81434abfe27e09c0275
       - LAGRANGE_NODE_CLIENT_STAKEADDRESS=0x5d51B4c1fb0c67d0e1274EC96c1B895F45505a3D
+      - LAGRANGE_NODE_STORE_DBPATH=mongodb://192.168.20.101:27017
     networks:
       localnet:
         ipv4_address: 192.168.20.4
