--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,8 +36,9 @@ services:
     environment:
       - LAGRANGE_NODE_CLIENT_GRPCURL=192.168.20.6:9090
       - LAGRANGE_NODE_CLIENT_PULLINTERVAL=2.4s
-      - LAGRANGE_NODE_CLIENT_PRIVATEKEY=0x0642cf177a12c962938366d7c2d286f49806625831aaed8e861405bfdd1f654a
-      - LAGRANGE_NODE_CLIENT_STAKEADDRESS=0x516D6C27C23CEd21BF7930E2a01F0BcA9A141a0d
+      - LAGRANGE_NODE_CLIENT_BLSPRIVATEKEY=0x0642cf177a12c962938366d7c2d286f49806625831aaed8e861405bfdd1f654a
+      - LAGRANGE_NODE_CLIENT_ECDSAPRIVATEKEY=0x232d99bc62cf95c358fb496e9f820ec299f43417397cea32f9f365daf4748429
+      - LAGRANGE_NODE_CLIENT_RPCENDPOINT=http://192.168.20.100:8545
       - LAGRANGE_NODE_STORE_DBPATH=mongodb://192.168.20.101:27017
     networks:
       localnet:
@@ -52,8 +53,9 @@ services:
     environment:
       - LAGRANGE_NODE_CLIENT_GRPCURL=192.168.20.6:9090
       - LAGRANGE_NODE_CLIENT_PULLINTERVAL=2s
-      - LAGRANGE_NODE_CLIENT_PRIVATEKEY=0xca056e1830045cd5aa844e02e493e27b8c454b3059315b8ee34d42414141247d
-      - LAGRANGE_NODE_CLIENT_STAKEADDRESS=0x4d694DE17246086d6451D732Ea8EA2a9a76dC997
+      - LAGRANGE_NODE_CLIENT_BLSPRIVATEKEY=0xca056e1830045cd5aa844e02e493e27b8c454b3059315b8ee34d42414141247d
+      - LAGRANGE_NODE_CLIENT_ECDSAPRIVATEKEY=0x25f536330df3a72fa381bfb5ea5552b2731523f08580e7a0e2e69618a9643faa
+      - LAGRANGE_NODE_CLIENT_RPCENDPOINT=http://192.168.20.100:8545
       - LAGRANGE_NODE_STORE_DBPATH=mongodb://192.168.20.101:27017
     networks:
       localnet:
@@ -68,8 +70,9 @@ services:
     environment:
       - LAGRANGE_NODE_CLIENT_GRPCURL=192.168.20.6:9090
       - LAGRANGE_NODE_CLIENT_PULLINTERVAL=1.8s
-      - LAGRANGE_NODE_CLIENT_PRIVATEKEY=0xa339d4976df7cc511ad3d31fb28407e0b92a3f876cc8d81434abfe27e09c0275
-      - LAGRANGE_NODE_CLIENT_STAKEADDRESS=0x5d51B4c1fb0c67d0e1274EC96c1B895F45505a3D
+      - LAGRANGE_NODE_CLIENT_BLSPRIVATEKEY=0xa339d4976df7cc511ad3d31fb28407e0b92a3f876cc8d81434abfe27e09c0275
+      - LAGRANGE_NODE_CLIENT_ECDSAPRIVATEKEY=0xc262364335471942e02e79d760d1f5c5ad7a34463303851cacdd15d72e68b228
+      - LAGRANGE_NODE_CLIENT_RPCENDPOINT=http://192.168.20.100:8545
       - LAGRANGE_NODE_STORE_DBPATH=mongodb://192.168.20.101:27017
     networks:
       localnet:
