--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -149,7 +149,7 @@ services:
         ipv4_address: 192.168.20.102
   lagrangesc:
     container_name: lagrange-smart-contract
-    image: lagrangelabs/lagrange-contracts:mock
+    image: lagrangelabs/lagrange-contracts:latest
     # image: lagrange/contracts
     networks:
       localnet:
