--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - uses: actions/setup-go@v4
         with:
-          go-version: '1.18' # The Go version to download (if necessary) and use.
+          go-version: "1.18" # The Go version to download (if necessary) and use.
 
         # Some tests, notably TestRandomOperations, are extremely slow in CI
         # with the race detector enabled, so we use -short when -race is
@@ -32,7 +32,7 @@ jobs:
       - name: test & coverage report creation
         run: |
           make test
-	env:
-	  ETH_RPC: ${{ secrets.ETH_RPC }}
-	  OPT_RPC: ${{ secrets.OPT_RPC }}
-	  ARB_RPC: ${{ secrets.ARB_RPC }}
+        env:
+          ETH_RPC: ${{ secrets.ETH_RPC }}
+          OPT_RPC: ${{ secrets.OPT_RPC }}
+          ARB_RPC: ${{ secrets.ARB_RPC }}
