--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - "/app/lagrange-node run-sequencer"
     environment:
       - LAGRANGE_NODE_SEQUENCER_RPCURL=http://192.168.20.100:8545
+      - LAGRANGE_NODE_SEQUENCER_ETHURL=http://192.168.20.100:8545
       - LAGRANGE_NODE_STORE_DBPATH=mongodb://192.168.20.101:27017
       - LAGRANGE_NODE_GOVERNANCE_ETHEREUMURL=http://192.168.20.100:8545
   simserver:
@@ -159,19 +160,10 @@ services:
       - "/bin/sh"
       - "-c"
       - "/app/lagrange-node run-client"
-  prover:
-    container_name: prover
-    image: lagrange-prover
-    environment:
-      - LAGRANGE_PROVER_SEQUENCERSTORAGE_DBPATH=mongodb://192.168.20.101:27017
-      - LAGRANGE_PROVER_PROVERSTORAGE_DBPATH=mongodb://192.168.20.101:27017
-    networks:
-      localnet:
-        ipv4_address: 192.168.20.102
   lagrangesc:
     container_name: lagrange-smart-contract
-    image: lagrangelabs/lagrange-contracts:latest
-    # image: lagrange/contracts
+    image: lagrangelabs/lagrange-contracts:mantle
+    # image: lagrange/contracts:latest
     networks:
       localnet:
         ipv4_address: 192.168.20.100
