--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,7 +7,9 @@ on:
   push:
     branches:
       - develop
-      - master
+    tags:
+      - "v[0-9]+.[0-9]+.[0-9]+*" # Push events to matching tags v1.0.0, v1.0.1, v1.1.0, v2.0.0, etc.
+
 jobs:
   golangci:
     name: golangci-lint
