--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,8 +2,9 @@ name: Test
 on:
   push:
     branches:
-      - master
       - develop
+    tags:
+      - "v[0-9]+.[0-9]+.[0-9]+*" # Push events to matching tags v1.0.0, v1.0.1, v1.1.0, v2.0.0, etc.
   pull_request:
 
 jobs:
