feat: update workflow script

--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -18,25 +18,41 @@ jobs:
       - name: Identify and Create New Tag
         id: new_tag
         run: |
-          # Fetch tags and identify the latest
+          # Extract major and minor version from the branch name
+          BRANCH_NAME="${GITHUB_REF#refs/heads/}"
+          VERSION_PREFIX=$(echo $BRANCH_NAME | sed -E 's/release\/v([0-9]+\.[0-9]+).*/\1/')
+          # Fetch tags and find the latest tag with the same major and minor version
           git fetch --tags
-          LATEST_TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
-          echo "Latest tag: $LATEST_TAG"
+          LATEST_TAG=$(git tag -l "v$VERSION_PREFIX.*" | sort -V | tail -n1)
+          echo "Latest tag for version $VERSION_PREFIX: $LATEST_TAG"
+          # Check if a tag was found, if not, start with x.0
+          if [ -z "$LATEST_TAG" ]; then
+              NEW_TAG="v${VERSION_PREFIX}.0"
+          else
+              # Increment the patch version
+              NEW_TAG=$(echo $LATEST_TAG | awk -F. '{print $1"."$2"."$3+1}')
+          fi
 
-          # Logic to increment the tag. This is a simple example; adjust as needed.
-          NEW_TAG=$(echo $LATEST_TAG | awk -F. '{print $1"."$2"."$3+1}')
-          echo "New tag: $NEW_TAG"
+                echo "New tag: $NEW_TAG"
 
-          # Create new tag and push
+          # Create and push the new tag
           git tag $NEW_TAG
           git push origin $NEW_TAG
           echo "::set-output name=tag::$NEW_TAG"
 
-      - name: Get Commit Message
-        id: get_commit
+      - name: Get Title For Release
+        id: get_pr_details
+        env:
+          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
         run: |
-          COMMIT_MESSAGE=$(git log -1 --pretty=format:%s)
-          echo "::set-output name=message::$COMMIT_MESSAGE"
+          # Fetch the full commit message of the most recent commit
+          FULL_COMMIT_MESSAGE=$(git log -1 --pretty=format:%B)
+          echo "Full commit message: $FULL_COMMIT_MESSAGE"
+
+          # Extract the main title from the commit message
+          # This regex captures the string before the first "(" and removes trailing spaces
+          PR_TITLE=$(echo "$FULL_COMMIT_MESSAGE" | sed -n '1p' | sed 's/ *([^()]*) *//g')
+          echo "::set-output name=title::$PR_TITLE"
 
       - name: Create Release
         uses: actions/create-release@v1
@@ -44,7 +60,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
         with:
           tag_name: ${{ steps.new_tag.outputs.tag }}
-          release_name: ${{ steps.get_commit.outputs.message }}
+          release_name: ${{ steps.get_pr_details.outputs.title }}
           draft: false
           prerelease: false
 
