--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -61,3 +61,22 @@ jobs:
           release_name: ${{ steps.get_pr_details.outputs.title }}
           draft: false
           prerelease: false
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: |
+            lagrangelabs/lagrange-node:${{ steps.new_tag.outputs.tag }}
