fix the genesis block verify

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,26 @@ services:
       - LAGRANGE_NODE_RPCCLIENT_MOCK_RPCURL=http://192.168.20.100:8545
       - LAGRANGE_NODE_STORE_DBPATH=mongodb://192.168.20.101:27017
       - LAGRANGE_NODE_GOVERNANCE_ETHEREUMURL=http://192.168.20.100:8545
+  simavs-sync:
+    container_name: avs-sync
+    image: lagrangelabs/avs-sync:main
+    networks:
+      localnet:
+        ipv4_address: 192.168.20.50
+    command:
+      - "/bin/sh"
+      - "-c"
+      - "/app/avs-sync"
+    environment:
+      - AVS_SYNC_SYNCHRONIZER_PRIVATEKEY=0x3e17bc938ec10c865fc4e2d049902716dc0712b5b0e688b7183c16807234a84c
+      - AVS_SYNC_SYNCHRONIZER_RPCENDPOINT=http://192.168.20.100:8545
+      - AVS_SYNC_SYNCHRONIZER_EIGENDELEGATIONMANAGERADDRESS=0x007C083DEEdB9a0EA3e06A316148fc110F7Fe49a
+      - AVS_SYNC_SYNCHRONIZER_LAGRANGESTAKEMANAGERADDRESS=0x0E7C083DEEdB9a0EA3e06A316148fc110F7Fe49a
+      - AVS_SYNC_SYNCHRONIZER_LAGRANGESERVICEADDRESS=0xF2740f6A6333c7B405aD7EfC68c74adAd83cC30D
+      - AVS_SYNC_SYNCHRONIZER_VOTEWEIGHERADDRESS=0x6Bf0fF4eBa00E3668c0241bb1C622CDBFE55bbE0
+      - AVS_SYNC_SYNCHRONIZER_COMMITTEEADDRESS=0x91E333A3d61862B1FE976351cf0F3b30aff1D202
+      - AVS_SYNC_SYNCHRONIZER_SYNCINTERVAL=1
+      - AVS_SYNC_SYNCHRONIZER_BEFORLOCKPERIOD=2
   simserver:
     container_name: server
     image: lagrange-node
