--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,26 @@ services:
       - LAGRANGE_NODE_RPCCLIENT_MOCK_RPCURL=http://192.168.20.100:8545
       - LAGRANGE_NODE_STORE_DBPATH=mongodb://192.168.20.101:27017
       - LAGRANGE_NODE_GOVERNANCE_ETHEREUMURL=http://192.168.20.100:8545
+  simavs-sync:
+    container_name: avs-sync
+    image: lagrangelabs/avs-sync:main
+    networks:
+      localnet:
+        ipv4_address: 192.168.20.50
+    command:
+      - "/bin/sh"
+      - "-c"
+      - "/app/avs-sync"
+    environment:
+      - AVS_SYNC_SYNCHRONIZER_PRIVATEKEY=0x3e17bc938ec10c865fc4e2d049902716dc0712b5b0e688b7183c16807234a84c
+      - AVS_SYNC_SYNCHRONIZER_RPCENDPOINT=http://192.168.20.100:8545
+      - AVS_SYNC_SYNCHRONIZER_EIGENDELEGATIONMANAGERADDRESS=0x007C083DEEdB9a0EA3e06A316148fc110F7Fe49a
+      - AVS_SYNC_SYNCHRONIZER_LAGRANGESTAKEMANAGERADDRESS=0x0E7C083DEEdB9a0EA3e06A316148fc110F7Fe49a
+      - AVS_SYNC_SYNCHRONIZER_LAGRANGESERVICEADDRESS=0xF2740f6A6333c7B405aD7EfC68c74adAd83cC30D
+      - AVS_SYNC_SYNCHRONIZER_VOTEWEIGHERADDRESS=0x6Bf0fF4eBa00E3668c0241bb1C622CDBFE55bbE0
+      - AVS_SYNC_SYNCHRONIZER_COMMITTEEADDRESS=0xF2740f6A6333c7B405aD7EfC68c74adAd83cC30D
+      - AVS_SYNC_SYNCHRONIZER_SYNCINTERVAL=1
+      - AVS_SYNC_SYNCHRONIZER_BEFORLOCKPERIOD=2
   simserver:
     container_name: server
     image: lagrange-node
@@ -36,7 +56,7 @@ services:
     image: lagrange-node
     environment:
       - LAGRANGE_NODE_CLIENT_GRPCURL=192.168.20.3:9090
-      - LAGRANGE_NODE_CLIENT_PULLINTERVAL=2.4s
+      - LAGRANGE_NODE_CLIENT_PULLINTERVAL=0.42s
       - LAGRANGE_NODE_CLIENT_BLSPRIVATEKEY=0x00000000000000000000000000000000000000000000000000000000499602d4
       - LAGRANGE_NODE_CLIENT_ECDSAPRIVATEKEY=0x232d99bc62cf95c358fb496e9f820ec299f43417397cea32f9f365daf4748429
       - LAGRANGE_NODE_RPCCLIENT_MOCK_RPCURL=http://192.168.20.100:8545
@@ -56,7 +76,7 @@ services:
     image: lagrange-node
     environment:
       - LAGRANGE_NODE_CLIENT_GRPCURL=192.168.20.3:9090
-      - LAGRANGE_NODE_CLIENT_PULLINTERVAL=2s
+      - LAGRANGE_NODE_CLIENT_PULLINTERVAL=0.5s
       - LAGRANGE_NODE_CLIENT_BLSPRIVATEKEY=0x00000000000000000000000000000000000000000000000000000000499602d5
       - LAGRANGE_NODE_CLIENT_ECDSAPRIVATEKEY=0x25f536330df3a72fa381bfb5ea5552b2731523f08580e7a0e2e69618a9643faa
       - LAGRANGE_NODE_RPCCLIENT_MOCK_RPCURL=http://192.168.20.100:8545
@@ -74,7 +94,7 @@ services:
     image: lagrange-node
     environment:
       - LAGRANGE_NODE_CLIENT_GRPCURL=192.168.20.3:9090
-      - LAGRANGE_NODE_CLIENT_PULLINTERVAL=1.8s
+      - LAGRANGE_NODE_CLIENT_PULLINTERVAL=0.43s
       - LAGRANGE_NODE_CLIENT_BLSPRIVATEKEY=0x00000000000000000000000000000000000000000000000000000000499602d6
       - LAGRANGE_NODE_CLIENT_ECDSAPRIVATEKEY=0xc262364335471942e02e79d760d1f5c5ad7a34463303851cacdd15d72e68b228
       - LAGRANGE_NODE_RPCCLIENT_MOCK_RPCURL=http://192.168.20.100:8545
@@ -92,7 +112,7 @@ services:
     image: lagrange-node
     environment:
       - LAGRANGE_NODE_CLIENT_GRPCURL=192.168.20.3:9090
-      - LAGRANGE_NODE_CLIENT_PULLINTERVAL=1.8s
+      - LAGRANGE_NODE_CLIENT_PULLINTERVAL=0.35s
       - LAGRANGE_NODE_CLIENT_BLSPRIVATEKEY=0x00000000000000000000000000000000000000000000000000000000499602d7
       - LAGRANGE_NODE_CLIENT_ECDSAPRIVATEKEY=0xb126ae5e3d88007081b76024477b854ca4f808d48be1e22fe763822bc0c17cb3
       - LAGRANGE_NODE_RPCCLIENT_MOCK_RPCURL=http://192.168.20.100:8545
@@ -110,7 +130,7 @@ services:
     image: lagrange-node
     environment:
       - LAGRANGE_NODE_CLIENT_GRPCURL=192.168.20.3:9090
-      - LAGRANGE_NODE_CLIENT_PULLINTERVAL=1.8s
+      - LAGRANGE_NODE_CLIENT_PULLINTERVAL=0.23s
       - LAGRANGE_NODE_CLIENT_BLSPRIVATEKEY=0x00000000000000000000000000000000000000000000000000000000499602d8
       - LAGRANGE_NODE_CLIENT_ECDSAPRIVATEKEY=0x220ecb0a36b61b15a3af292c4520a528395edc51c8d41db30c74382a4af4328d
       - LAGRANGE_NODE_RPCCLIENT_MOCK_RPCURL=http://192.168.20.100:8545
@@ -128,7 +148,7 @@ services:
     image: lagrange-node
     environment:
       - LAGRANGE_NODE_CLIENT_GRPCURL=192.168.20.3:9090
-      - LAGRANGE_NODE_CLIENT_PULLINTERVAL=1.8s
+      - LAGRANGE_NODE_CLIENT_PULLINTERVAL=0.38s
       - LAGRANGE_NODE_CLIENT_BLSPRIVATEKEY=0x00000000000000000000000000000000000000000000000000000000499602d9
       - LAGRANGE_NODE_CLIENT_ECDSAPRIVATEKEY=0x2a1b271106503777361139b2d28c3f360ce980e2dab0c18f4684d5b417ac46b3
       - LAGRANGE_NODE_RPCCLIENT_MOCK_RPCURL=http://192.168.20.100:8545
@@ -146,7 +166,7 @@ services:
     image: lagrange-node
     environment:
       - LAGRANGE_NODE_CLIENT_GRPCURL=192.168.20.3:9090
-      - LAGRANGE_NODE_CLIENT_PULLINTERVAL=1.8s
+      - LAGRANGE_NODE_CLIENT_PULLINTERVAL=0.47s
       - LAGRANGE_NODE_CLIENT_BLSPRIVATEKEY=0x00000000000000000000000000000000000000000000000000000000499602da
       - LAGRANGE_NODE_CLIENT_ECDSAPRIVATEKEY=0x311fb4aa77facbc0debb6d9d88d3b4047115d905a4ff7b4399fc164494a75e3c
       - LAGRANGE_NODE_RPCCLIENT_MOCK_RPCURL=http://192.168.20.100:8545
