sync sc updates

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     environment:
       - LAGRANGE_NODE_RPCCLIENT_MOCK_RPCURL=http://192.168.20.100:8545
       - LAGRANGE_NODE_STORE_DBPATH=mongodb://192.168.20.101:27017
-      - LAGRANGE_NODE_GOVERNANCE_ETHEREUMURL=http://192.168.20.100:8545
+      - LAGRANGE_NODE_SEQUENCER_ETHEREUMURL=http://192.168.20.100:8545
   simavs-sync:
     container_name: avs-sync
     image: lagrangelabs/avs-sync:main
@@ -28,11 +28,11 @@ services:
     environment:
       - AVS_SYNC_SYNCHRONIZER_PRIVATEKEY=0x3e17bc938ec10c865fc4e2d049902716dc0712b5b0e688b7183c16807234a84c
       - AVS_SYNC_SYNCHRONIZER_RPCENDPOINT=http://192.168.20.100:8545
-      - AVS_SYNC_SYNCHRONIZER_EIGENDELEGATIONMANAGERADDRESS=0x007C083DEEdB9a0EA3e06A316148fc110F7Fe49a
-      - AVS_SYNC_SYNCHRONIZER_LAGRANGESTAKEMANAGERADDRESS=0x0E7C083DEEdB9a0EA3e06A316148fc110F7Fe49a
-      - AVS_SYNC_SYNCHRONIZER_LAGRANGESERVICEADDRESS=0xF2740f6A6333c7B405aD7EfC68c74adAd83cC30D
-      - AVS_SYNC_SYNCHRONIZER_VOTEWEIGHERADDRESS=0x6Bf0fF4eBa00E3668c0241bb1C622CDBFE55bbE0
-      - AVS_SYNC_SYNCHRONIZER_COMMITTEEADDRESS=0xF2740f6A6333c7B405aD7EfC68c74adAd83cC30D
+      - AVS_SYNC_SYNCHRONIZER_EIGENDELEGATIONMANAGERADDRESS=0xF2740f6A6333c7B405aD7EfC68c74adAd83cC30D
+      - AVS_SYNC_SYNCHRONIZER_LAGRANGESTAKEMANAGERADDRESS=0x2445aC9Eb7Bcb502EbabCb63844eFe4049270f93
+      - AVS_SYNC_SYNCHRONIZER_LAGRANGESERVICEADDRESS=0xBda41273d671bb33374F7b9C4Ae8746c712727f7
+      - AVS_SYNC_SYNCHRONIZER_VOTEWEIGHERADDRESS=0x47836868bCC9Fd592824444D0F428012d3b057f1
+      - AVS_SYNC_SYNCHRONIZER_COMMITTEEADDRESS=0xBF4E09354df24900e3d2A1e9057a9F7601fbDD06
       - AVS_SYNC_SYNCHRONIZER_SYNCINTERVAL=1
       - AVS_SYNC_SYNCHRONIZER_BEFORLOCKPERIOD=2
   simserver:
@@ -61,7 +61,6 @@ services:
       - LAGRANGE_NODE_CLIENT_ECDSAPRIVATEKEY=0x232d99bc62cf95c358fb496e9f820ec299f43417397cea32f9f365daf4748429
       - LAGRANGE_NODE_RPCCLIENT_MOCK_RPCURL=http://192.168.20.100:8545
       - LAGRANGE_NODE_CLIENT_ETHEREUMURL=http://192.168.20.100:8545
-      - LAGRANGE_NODE_STORE_DBPATH=mongodb://192.168.20.101:27017
     networks:
       localnet:
         ipv4_address: 192.168.20.4
@@ -81,7 +80,6 @@ services:
       - LAGRANGE_NODE_CLIENT_ECDSAPRIVATEKEY=0x25f536330df3a72fa381bfb5ea5552b2731523f08580e7a0e2e69618a9643faa
       - LAGRANGE_NODE_RPCCLIENT_MOCK_RPCURL=http://192.168.20.100:8545
       - LAGRANGE_NODE_CLIENT_ETHEREUMURL=http://192.168.20.100:8545
-      - LAGRANGE_NODE_STORE_DBPATH=mongodb://192.168.20.101:27017
     networks:
       localnet:
         ipv4_address: 192.168.20.5
@@ -99,7 +97,6 @@ services:
       - LAGRANGE_NODE_CLIENT_ECDSAPRIVATEKEY=0xc262364335471942e02e79d760d1f5c5ad7a34463303851cacdd15d72e68b228
       - LAGRANGE_NODE_RPCCLIENT_MOCK_RPCURL=http://192.168.20.100:8545
       - LAGRANGE_NODE_CLIENT_ETHEREUMURL=http://192.168.20.100:8545
-      - LAGRANGE_NODE_STORE_DBPATH=mongodb://192.168.20.101:27017
     networks:
       localnet:
         ipv4_address: 192.168.20.6
@@ -117,7 +114,6 @@ services:
       - LAGRANGE_NODE_CLIENT_ECDSAPRIVATEKEY=0xb126ae5e3d88007081b76024477b854ca4f808d48be1e22fe763822bc0c17cb3
       - LAGRANGE_NODE_RPCCLIENT_MOCK_RPCURL=http://192.168.20.100:8545
       - LAGRANGE_NODE_CLIENT_ETHEREUMURL=http://192.168.20.100:8545
-      - LAGRANGE_NODE_STORE_DBPATH=mongodb://192.168.20.101:27017
     networks:
       localnet:
         ipv4_address: 192.168.20.7
@@ -135,7 +131,6 @@ services:
       - LAGRANGE_NODE_CLIENT_ECDSAPRIVATEKEY=0x220ecb0a36b61b15a3af292c4520a528395edc51c8d41db30c74382a4af4328d
       - LAGRANGE_NODE_RPCCLIENT_MOCK_RPCURL=http://192.168.20.100:8545
       - LAGRANGE_NODE_CLIENT_ETHEREUMURL=http://192.168.20.100:8545
-      - LAGRANGE_NODE_STORE_DBPATH=mongodb://192.168.20.101:27017
     networks:
       localnet:
         ipv4_address: 192.168.20.8
@@ -153,7 +148,6 @@ services:
       - LAGRANGE_NODE_CLIENT_ECDSAPRIVATEKEY=0x2a1b271106503777361139b2d28c3f360ce980e2dab0c18f4684d5b417ac46b3
       - LAGRANGE_NODE_RPCCLIENT_MOCK_RPCURL=http://192.168.20.100:8545
       - LAGRANGE_NODE_CLIENT_ETHEREUMURL=http://192.168.20.100:8545
-      - LAGRANGE_NODE_STORE_DBPATH=mongodb://192.168.20.101:27017
     networks:
       localnet:
         ipv4_address: 192.168.20.9
@@ -171,7 +165,6 @@ services:
       - LAGRANGE_NODE_CLIENT_ECDSAPRIVATEKEY=0x311fb4aa77facbc0debb6d9d88d3b4047115d905a4ff7b4399fc164494a75e3c
       - LAGRANGE_NODE_RPCCLIENT_MOCK_RPCURL=http://192.168.20.100:8545
       - LAGRANGE_NODE_CLIENT_ETHEREUMURL=http://192.168.20.100:8545
-      - LAGRANGE_NODE_STORE_DBPATH=mongodb://192.168.20.101:27017
     networks:
       localnet:
         ipv4_address: 192.168.20.10
@@ -181,8 +174,7 @@ services:
       - "/app/lagrange-node run-client"
   lagrangesc:
     container_name: lagrange-smart-contract
-    image: lagrangelabs/lagrange-contracts:0.2.1
-    # image: lagrange/contracts:latest
+    image: lagrangelabs/lagrange-contracts:v2
     networks:
       localnet:
         ipv4_address: 192.168.20.100
